# ai-models-aurora

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ai_models_aurora/: model.py
tests/: test_code.py
